About me completed, portfolio revamped, nav bar adds icons

--- a/data/project1/project.json
+++ b/data/project1/project.json
@@ -1,6 +1,6 @@
 {
     "title": "Progetto 1",
-    "description": "Descrizione del progetto 1.",
+    "description": "Bella descrizione del progetto 1.",
     "image": "data/project1/project_image.jpg",
     "sections": [
         {
