--- a/data/project2/project.json
+++ b/data/project2/project.json
@@ -1,12 +1,12 @@
 {
-    "title": "Progetto 2",
-    "description": "Descrizione del progetto 2.",
+    "title": "Captain Bushfire",
+    "description": "Created during an intense game jam, this unique game puts you in the role of a brave koala tasked with defending its group of young koalas from the raging wildfires threatening their forest home. Navigate through the burning landscape, strategize to protect your family, and face the relentless flames with courage and determination. The game combines heart-pounding action with a touching story of survival and resilience, offering an unforgettable experience in the face of nature's fury.",
     "image": "data/project2/project_image.jpg",
     "sections": [
         {
-            "title": "Sezione 1",
+            "title": "Fire Mechanic",
             "content": "Testo della sezione 1.",
-            "images": [""],
+            "images": [],
             "codeSnippets": [
                 {
                     "language": "javascript",
@@ -15,7 +15,7 @@
             ]
         },
         {
-            "title": "Sezione 2",
+            "title": "Character Movement (with Enhanced Input)",
             "content": "Testo della sezione 2.",
             "codeSnippets": [
                 {
