--- a/data/project1/project.json
+++ b/data/project1/project.json
@@ -1,6 +1,6 @@
 {
     "title": "Project Winter",
-    "description": "Embark on a chilling journey in our Survival Horror game...",
+    "description": "Embark on a chilling journey in our Survival Horror game, where you step into the shoes of a young child lost in a hostile, snow-covered mountain. Amidst relentless blizzards and treacherous terrain, you must scavenge for remnants of your childhood while evading a relentless, terrifying creature that stalks your every move. The atmosphere is thick with tension and anxiety as you navigate the haunting landscape, piecing together the story of your past. As you fight for survival, uncover hidden truths and face shocking revelations that will keep you on the edge of your seat.",
     "image": "data/project1/project_image.jpg",
     "tags": ["UNREAL ENGINE 5", "GROUP PROJECT", "GAMEPLAY/AI PROGRAMMER"],
     "sections": [
