first release ready

--- a/data/project2/project.json
+++ b/data/project2/project.json
@@ -6,7 +6,7 @@
     "sections": [
         {
             "title": "Fire Mechanic",
-            "content": "Testo della sezione 1.",
+            "content": "Description and snippets work in progress.",
             "images": [],
             "videos": [],
             "codeSnippets": [
@@ -15,7 +15,7 @@
         },
         {
             "title": "Character Movement (with Enhanced Input)",
-            "content": "Testo della sezione 2.",
+            "content": "Description and snippets work in progress.",
             "images": [],
             "videos": [],
             "codeSnippets": [
