--- a/data/project2/project.json
+++ b/data/project2/project.json
@@ -1,8 +1,11 @@
 {
     "title": "CAPTAIN BUSHFIRE",
     "description": "Created during the GameDev.tv Game Jam 2024, which theme was \"Last Stand\".<br>This unique game puts you in the role of a brave koala tasked with defending its group of young koalas from the raging wildfires threatening their forest home.<br><br>I took the role of Gameplay Developer, implementing many of the game's functionalities, and the most interesting ones are displayed here.<br>The group consisted of 3 Developers, a 3d Artist, a VFX Programmer and a SFX Programmer.<br>This project helped me in applying all the concepts i studied in courses about Unreal Engine 5 and put them in action on a very small period under pressure.",
+    "background": "data/project2/project_image.jpg",
+    "type": "image",
     "image": "data/project2/project_image.jpg",
     "tags": ["UNREAL ENGINE 5", "GAME JAM", "GAMEPLAY PROGRAMMER"],
+    "link" : "https://pouyad.itch.io/captain-bushfire",
     "sections": [
         {
             "title": "Fire Mechanic",
