--- a/data/project1/project.json
+++ b/data/project1/project.json
@@ -1,74 +1,27 @@
 {
-    "title": "PROJECT WINTER",
-    "description": "Created during the Digital Bros Game Academy course, this project involved developing a survival game. In this game, you play as a child living in the mountains, trying to find his lost family while uncovering secrets that shouldn’t be unveiled. He must learn how to survive in such a harsh environment while something (or someone) seems to be hunting him.<br><br>I took on the role of Gameplay and AI Programmer, implementing most of the game's functionalities. Here, you can see the best and most interesting ones. The group consisted of fewer than 10 people in total. This project helped me learn a lot about Unreal Engine 5 and C++ in general, but especially how to write robust, optimized, clean, and self-documented code, as well as researching the best approaches and methodologies to use. In addition, this project taught me how to collaborate with all the other \"departments\", just like in a real game studio, as this was the main goal of the team project.<br><br>Since the project is still under active development, all the content in this page is subject to changes/optimizations.",
+    "title": "THE SHATTERED PEAK",
+    "description": "Created during the Digital Bros Game Academy course, the project theme was \"<b>3D Survival</b>\".<br>In this game, you play as a child living in the mountains, trying to find his lost family while uncovering secrets that shouldn't be unveiled. He must learn how to survive in such a harsh environment while something (or someone) seems to be hunting him.<br><br>I took on the role of <b>Lead Programmer</b>, with focus on <b>Gameplay and AI</b>, implementing most of the game's functionalities. Here, you can see the best and most interesting ones.<br>The group consisted of fewer than 10 people in total.<br><br>This project helped me learn a lot about Unreal Engine 5 and C++ in general, but especially how to write robust, optimized, clean, and self-documented code, as well as researching the best approaches and methodologies to use.<br>In addition, i developer every feature with a \"<b>design oriented</b>\" mindset, trying to expose as much as i could to the designers, in order to give them the ability to customize every feaure to their likings and needs.<br><br>This project taught me how to collaborate with all the other \"departments\", just like in a real game studio, as this was the main goal of the team project.<br><br>Since the project is still under active development, all the content in this page is subject to changes/optimizations.",
     "background": "data/project1/project_image.jpg",
+    "preview": "data/project1/preview.png",
     "type": "video",
-    "image": "https://www.youtube-nocookie.com/embed/JS0X-DlxPP4?autoplay=1&mute=1&si=A3VNQlIW30Zdx9as&amp",
+    "image": "https://www.youtube-nocookie.com/embed/VrLsMUiefgw?autoplay=1&mute=1&si=A3VNQlIW30Zdx9as&amp",
     "tags": ["UNREAL ENGINE 5", "GROUP PROJECT", "GAMEPLAY / AI PROGRAMMER", "UNDER DEVELOPMENT"],
     "sections": [
         {
             "title": "Creature AI Behavior",
-            "content": "In the game, I developed an AI-controlled creature inspired by the \"Slender\" game, implementing complex behaviors and interactions with the player. The creature spawns at a variable distance from the player based on the danger level, which changes according to the player's location and playtime. The spawn area is dynamically adjusted based on the areas the player is in and the objects near the spawn area, always trying to play \"hide and seek\" to increase the anxiety it provides to the player. The creature can spawn in the area between two concentric circles around the player and will despawn if the player moves beyond a maximum distance or after a set time. Additionally, the creature triggers various effects, such as sounds and visual distortions, when the player looks at it for a certain period, adding to the eerie atmosphere. These effects smoothly adjust based on proximity and danger level, ensuring a seamless and immersive experience.",
+            "content": "In the game, I developed an AI-controlled creature inspired by the \"<b>Slender</b>\" game, implementing complex behaviors and interactions with the player. The creature spawns at a variable distance from the player based on the danger level, which changes according to the player's location and playtime. The spawn area is dynamically adjusted based on the areas the player is in and the objects near the spawn area, always trying to play \"<b>hide and seek</b>\" to increase the anxiety it provides to the player. The creature can spawn in the area between two concentric circles around the player and will despawn if the player moves beyond a maximum distance or after a set time calculated at random. Additionally, the creature triggers various effects, such as sounds and visual distortions, when the player looks at it for a certain period, adding to the eerie atmosphere. These effects smoothly adjust based on proximity and danger level, ensuring a seamless and immersive experience.<br><br>Code Snippets will be available on project completion.",
             "images": [
-                "data/project1/project_image_1.jpg"
+
             ],
-            "videos": [
-                "https://www.youtube-nocookie.com/embed/bnC-kuL_CYw?si=RkOMpGjvC7hVn2wa"
-            ],
-            "codeSnippets": [
-                {
-                    "language": "C++ Header",
-                    "name": "Creature.h",
-                    "file": "data/project1/Creature.h"
-                },
-                {
-                    "language": "C++ Source",
-                    "name": "Creature.cpp",
-                    "file": "data/project1/Creature.cpp"
-                },
-                {
-                    "language": "C++ Header",
-                    "name": "CreatureManager.h",
-                    "file": "data/project1/CreatureManager.h"
-                },
-                {
-                    "language": "C++ Source",
-                    "name": "CreatureManager.cpp",
-                    "file": "data/project1/CreatureManager.cpp"
-                }
-            ]
-        },
-        {
-            "title": "Hunt Zones",
-            "content": "The HuntZone system consists of multiple trigger zones placed throughout the game map to define areas where the creature can spawn and interact with the player. These zones are managed by a subsystem class, which keeps track of active zones and ensures that the creature spawns only when the player enters these areas. Each zone has a specific danger level that influences the spawn mechanics and behavior of the creature. The system uses Unreal Engine's trigger volumes and custom trace channels to accurately detect the player's presence and manage the lifecycle of the creature. This setup allows for a flexible and scalable approach to defining and adjusting the hunting grounds, enhancing the dynamic and unpredictable nature of the game.",
-            "images": [],
             "videos": [],
+
             "codeSnippets": [
-                {
-                    "language": "C++ Header",
-                    "name": "HuntZone.h",
-                    "file": "data/project1/HuntZone.h"
-                },
-                {
-                    "language": "C++ Source",
-                    "name": "HuntZone.cpp",
-                    "file": "data/project1/HuntZone.cpp"
-                },
-                {
-                    "language": "C++ Header",
-                    "name": "HuntZoneManager.h",
-                    "file": "data/project1/HuntZoneManager.h"
-                },
-                {
-                    "language": "C++ Source",
-                    "name": "HuntZoneManager.cpp",
-                    "file": "data/project1/HuntZoneManager.cpp"
-                }
+
             ]
         },
         {
             "title": "Audio Manager",
-            "content": "The Audio Manager consists of a component in the GameMode that handles all the SFX present in the game. It controls all the logic for deciding when to play audio cues, their volume, and other related parameters, based on different game conditions (such as the creature's presence, its distance from the player, and many other factors).This system ensures that audio effects are dynamically responsive to the in-game situation, adding another layer of immersion by changing the auditory experience based on the player's actions and surroundings.",
+            "content": "The Audio Manager consists of a component in the GameMode that handles all the SFX present in the game. It controls all the logic for deciding when to play audio cues, their volume, and other related parameters, based on different game conditions (such as the creature's presence, its distance from the player, and many other factors).This system ensures that audio effects are dynamically responsive to the in-game situation, adding another layer of immersion by changing the auditory experience based on the player's actions and surroundings.<br>Designers are able to customize every detail of the sound to be played. If it should be spatial or not, it's location, if it should loop and many other features that were thought together with the designers, in order to give them the power to express themselves.<br><br>Code Snippets will be available on project completion.",
             "images": [],
             "videos": [],
             "codeSnippets": [
@@ -76,8 +29,18 @@
             ]
         },
         {
-            "title": "Miscellaneous",
-            "content": "Aside from the main mechanics, I also helped develop the following features:<br><br>- UI<br>- Player-related features (such as movement, sprinting, stamina control, etc.)",
+            "title": "Other Mechanics",
+            "content": "<b>HuntZone system</b><br>This system consists of multiple trigger zones placed throughout the game map to define areas where the creature can spawn and interact with the player. These zones are managed by a subsystem class, which keeps track of active zones and ensures that the creature spawns only when the player enters these areas. Each zone has a specific danger level that influences the spawn mechanics and behavior of the creature. The system uses Unreal Engine's trigger volumes and custom trace channels to accurately detect the player's presence and manage the lifecycle of the creature. This setup allows for a flexible and scalable approach to defining and adjusting the hunting grounds, enhancing the dynamic and unpredictable nature of the game.<br><br><b>FlashLight</b><br>The flashlight is the player's main tool for seeing in the dark and hostile environment. In certain areas and under specific conditions, it helps reveal important parts of the story. However, only the most observant players will be able to discover all the hidden secrets.<br><br><b>TeddyBear</b><br>The teddy bear is the key item to fight off the Creature in the later stages of the game when its presence is strongest. Since the main character is a child, we wanted his most powerful tool to be his trusted companion. When used, the teddy bear repels the Creature and lights up the surroundings, but only for a short time, giving the player a brief moment of relief and a chance to find safety.<br><br>In addition to developing these mechanics, I also contributed to other areas of the game, including:<br>- Player Features: Implemented player-related mechanics, such as movement, sprinting, and stamina management.<br>- Subsystems: Worked on various underlying systems to support gameplay functionality.<br>- UI: I developed some of the in-game widgets, keeping with the diegetic UI style.<br>- VFX and Camera Effects: Contributed to visual effects and camera interactions.<br>- Version Control: Managing version control was crucial for a project of this size. As one of the more experienced developers in this area, I co-managed the Git repository, using the Git Flow branching strategy. Our instructor was very satisfied for how well-organized we kept the project, which made us really proud.<br><br>Code Snippets will be available on project completion.",
+            "images": [],
+            "videos": [],
+            "codeSnippets": [
+
+            ]
+        },
+
+        {
+            "title": "Personal Considerations",
+            "content": "Working on this project was an amazing experience. I loved getting to know so many talented people who shared my interests and dedication. Balancing this project with my regular job was a real challenge, but I'm so glad I took it on. I can't even count how much I've learned during this time, and I'm excited to keep learning more every day.<br><br>I won't lie — there were some tough moments, especially trying to meet all the deadlines with limited time, while still delivering results we could be proud of. Some of us gave up all our free time to make this happen, and I feel really lucky to have worked with such dedicated people through all those hours. I look forward to continuing to work with them even after this course is over.",
             "images": [],
             "videos": [],
             "codeSnippets": [
